--- a/Xiao.conf
+++ b/Xiao.conf
@@ -12,7 +12,7 @@ ipv6 = false // 如无特殊需求不应开启 IPv6，目前网络环境下 IPv6
 [Rule]
 RULE-SET,https://github.com/Blankwonder/surge-list/raw/master/blocked.list,Proxy
 RULE-SET,https://github.com/Blankwonder/surge-list/raw/master/cn.list,DIRECT
-DOMAIN,apps.apple.com,Proxy
+DOMAIN,apps.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT // Apple Maps
 DOMAIN-SUFFIX,store.apple.com,DIRECT // Apple Store Online
 RULE-SET,SYSTEM,Proxy
