--- a/Xiao.conf
+++ b/Xiao.conf
@@ -16,7 +16,7 @@ DOMAIN,apps.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT // Apple Maps
 DOMAIN-SUFFIX,store.apple.com,DIRECT // Apple Store Online
 RULE-SET,SYSTEM,Proxy
-RULE-SET,https://github.com/Blankwonder/surge-list/raw/master/apple.list,Proxy
+RULE-SET,https://github.com/Blankwonder/surge-list/raw/master/apple.list,DIRECT
 # 以下规则将触发本地 DNS 解析
 RULE-SET,LAN,DIRECT
 GEOIP,CN,DIRECT
