--- a/Xiao.conf
+++ b/Xiao.conf
@@ -8,7 +8,7 @@ dns-server = 223.5.5.5, 114.114.114.114
 # encrypted-dns-server = https://223.5.5.5/ // 除非当地 ISP 有严重的 DNS 污染问题，否则没必要开启 DoH，传统 DNS 的性能最优，网络异常后恢复速度最快
 wifi-assist = false
 ipv6 = false // 如无特殊需求不应开启 IPv6，目前网络环境下 IPv6 只会带来问题。
-
+#hide-vpn-icon = true
 [Rule]
 RULE-SET,https://github.com/Blankwonder/surge-list/raw/master/blocked.list,Proxy
 RULE-SET,https://github.com/Blankwonder/surge-list/raw/master/cn.list,DIRECT
