--- a/clash/parsers.yml
+++ b/clash/parsers.yml
@@ -12,191 +12,139 @@ parsers: # array
   # 建立自己的配置
     yaml:
       prepend-proxy-groups: # 建立策略组
-      - name: 🥷PROXY
+      - name: PROXY
         type: select
-        url: http://www.google.com/generate_204
+        url: http://www.gstatic.com/generate_204
         interval: 300
         proxies:
-         - 🚀URL-TEST
-         - 🎛LOAD-BALANCE
-         - 🕹Fallback
-         - 👆SELECT
+        
          - DIRECT
          - 🇭🇰香港
-         - 🐳台湾
+         - 🇨🇳台湾
          - 🇯🇵日本
          - 🇸🇬新加坡
          - 🇰🇷韩国
          - 🇺🇸美国
-         - 👨‍🎤其他
+         - 🏴‍☠️其他
 
-      - name: 👆SELECT
+      - name: Emby
         type: select
         proxies:
-         - 🚀URL-TEST
-         - 🎛LOAD-BALANCE
-         - 🕹Fallback
-         - ⏳YouTube-Url-Test
+        
          - DIRECT
          - 🇭🇰香港
-         - 🐳台湾
+         - 🇨🇳台湾
          - 🇯🇵日本
          - 🇸🇬新加坡
          - 🇰🇷韩国
          - 🇺🇸美国
-         - 👨‍🎤其他
-
-      - name: 🚀URL-TEST
-        type: url-test
-        url: http://www.google.com/generate_204
-        interval: 120
-        lazy: true
-        tolerance: 100
+         - 🏴‍☠️其他
         
-      - name: 🎛LOAD-BALANCE
-        type: load-balance
-        url: http://www.gstatic.com/generate_204
-        interval: 600
-
-      - name: 🕹Fallback
-        type: fallback
-        url: http://www.gstatic.com/generate_204
-        interval: 60
-        lazy: true
-        tolerance: 30
-        
-
-      - name: 🎎YouTube
+      - name: YouTube
         type: select
         proxies:
-         - 🚀URL-TEST
-         - 🎛LOAD-BALANCE
-         - 🕹Fallback
-         - ⏳YouTube-Url-Test
-         - 👆SELECT
+        
          - DIRECT
          - 🇭🇰香港
-         - 🐳台湾
+         - 🇨🇳台湾
          - 🇯🇵日本
          - 🇸🇬新加坡
          - 🇰🇷韩国
          - 🇺🇸美国
-         - 👨‍🎤其他
+         - 🏴‍☠️其他
          
-      - name: ⏳YouTube-Url-Test
-        type: url-test
-        url: https://www.youtube.com/
-        interval: 120
-        lazy: true
-        tolerance: 100
-        proxies:
-            - REJECT
-            - DIRECT
-
-      - name: 📽Netflix
+      - name: Netflix
         type: select
         proxies:
-         - 🚀URL-TEST
-         - 🎛LOAD-BALANCE
-         - 🕹Fallback
-         - 👆SELECT
+
          - DIRECT
          - 🇭🇰香港
-         - 🐳台湾
+         - 🇨🇳台湾
          - 🇯🇵日本
          - 🇸🇬新加坡
          - 🇰🇷韩国
          - 🇺🇸美国
-         - 👨‍🎤其他
+         - 🏴‍☠️其他
 
-      - name: 🤖OpenAI
+      - name: OpenAI
         type: select
         proxies:
-         - 🚀URL-TEST
-         - 🎛LOAD-BALANCE
-         - 🕹Fallback
-         - 👆SELECT
+        
          - DIRECT
          - 🇭🇰香港
-         - 🐳台湾
+         - 🇨🇳台湾
          - 🇯🇵日本
          - 🇸🇬新加坡
          - 🇰🇷韩国
          - 🇺🇸美国
-         - 👨‍🎤其他
+         - 🏴‍☠️其他
 
-      - name: 🔍Bing
+      - name: Bing
         type: select
         proxies:
-         - 🚀URL-TEST
-         - 🎛LOAD-BALANCE
-         - 🕹Fallback
-         - 👆SELECT
+       
          - DIRECT
          - 🇭🇰香港
-         - 🐳台湾
+         - 🇨🇳台湾
          - 🇯🇵日本
          - 🇸🇬新加坡
          - 🇰🇷韩国
          - 🇺🇸美国
-         - 👨‍🎤其他
+         - 🏴‍☠️其他
 
-      - name: 🛀Bilibiliintl
+      - name: Bilibi
         type: select
         proxies:
-         - 🚀URL-TEST
-         - 🎛LOAD-BALANCE
-         - 🕹Fallback
-         - 👆SELECT
+   
          - DIRECT
          - 🇭🇰香港
-         - 🐳台湾
+         - 🇨🇳台湾
          - 🇯🇵日本
          - 🇸🇬新加坡
          - 🇰🇷韩国
          - 🇺🇸美国
-         - 👨‍🎤其他
+         - 🏴‍☠️其他
 
-      - name: 🚦AD
+      - name: AD
         type: select
         proxies:
             - REJECT
             - DIRECT
-            - 🥷PROXY
+            - PROXY
                
       - name: 🇭🇰香港
-        type: url-test
-        url: http://www.google.com/generate_204
+        type: select
+        url: http://www.gstatic.com/generate_204
         interval: 300
       
-      - name: 🐳台湾
-        type: url-test
-        url: http://www.google.com/generate_204
+      - name: 🇨🇳台湾
+        type: select
+        url: http://www.gstatic.com/generate_204
         interval: 300
       
       - name: 🇯🇵日本
-        type: url-test
-        url: http://www.google.com/generate_204
+        type: select
+        url: http://www.gstatic.com/generate_204
         interval: 300
       
       - name: 🇸🇬新加坡
-        type: url-test
-        url: http://www.google.com/generate_204
+        type: select
+        url: http://www.gstatic.com/generate_204
         interval: 300
       
       - name: 🇰🇷韩国
-        type: url-test
-        url: http://www.google.com/generate_204
+        type: select
+        url: http://www.gstatic.com/generate_204
         interval: 300
 
       - name: 🇺🇸美国
-        type: url-test
-        url: http://www.google.com/generate_204
+        type: select
+        url: http://www.gstatic.com/generate_204
         interval: 300
       
-      - name: 👨‍🎤其他
-        type: url-test
-        url: http://www.google.com/generate_204
+      - name: 🏴‍☠️其他
+        type: select
+        url: http://www.gstatic.com/generate_204
         interval: 300
               
   # 策略组示例
@@ -212,27 +160,26 @@ parsers: # array
           # - 节点名称或其他分组套娃
           
       commands:
-        - proxy-groups.(🚀URL-TEST).proxies=[]proxyNames
-        - proxy-groups.(🎛LOAD-BALANCE).proxies=[]proxyNames
-        - proxy-groups.(🕹Fallback).proxies=[]proxyNames
-        - proxy-groups.(⏳YouTube-Url-Test).proxies=[]proxyNames
+        - proxy-groups.().proxies=[]proxyNames
+        
+        - proxy-groups.(YouTube).proxies=[]proxyNames
         - proxy-groups.🇭🇰香港.proxies=[]proxyNames|港|香港|🇭🇰|HK|Hong Kong # 向指定策略组添加订阅中的节点名，可使用正则过滤
-        - proxy-groups.🐳台湾.proxies=[]proxyNames|台|台湾|新北|彰化|TW|Taiwan
+        - proxy-groups.🇨🇳台湾.proxies=[]proxyNames|台|台湾|新北|彰化|TW|Taiwan
         - proxy-groups.🇯🇵日本.proxies=[]proxyNames|日|日本|🇯🇵|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan
         - proxy-groups.🇰🇷韩国.proxies=[]proxyNames|韩|韓|韩国|🇰🇷|KR|Korea|KOR|首尔
         - proxy-groups.🇸🇬新加坡.proxies=[]proxyNames|新加坡|🇸🇬|坡|狮城|SG|Singapore
         - proxy-groups.🇺🇸美国.proxies=[]proxyNames|美|美国|🇺🇸|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States
-        - proxy-groups.👨‍🎤其他.proxies=[]proxyNames|^[^香日台新韩美]*$ # 这个可以自定义，这个正则的意思是排除节点名字有“香日台新韩美”的节点。
+        - proxy-groups.🏴‍☠️其他.proxies=[]proxyNames|^[^香日台新韩美]*$ # 这个可以自定义，这个正则的意思是排除节点名字有“香日台新韩美”的节点。
         - mixed-port=7890
 
        # 为各个策略组添加一个DIRECT，避免机场节点无法匹配上面的正则筛选而导致配置出错。应该有其他办法避免，但是我不会。
-        - proxy-groups.🇭🇰香港.proxies.0+REJECT
-        - proxy-groups.🐳台湾.proxies.0+REJECT
-        - proxy-groups.🇯🇵日本.proxies.0+REJECT
-        - proxy-groups.🇰🇷韩国.proxies.0+REJECT
-        - proxy-groups.🇸🇬新加坡.proxies.0+REJECT
-        - proxy-groups.🇺🇸美国.proxies.0+REJECT
-        - proxy-groups.👨‍🎤其他.proxies.0+REJECT
+        - proxy-groups.🇭🇰香港.proxies.0+DIRECT
+        - proxy-groups.🇨🇳台湾.proxies.0+DIRECT
+        - proxy-groups.🇯🇵日本.proxies.0+DIRECT
+        - proxy-groups.🇰🇷韩国.proxies.0+DIRECT
+        - proxy-groups.🇸🇬新加坡.proxies.0+DIRECT
+        - proxy-groups.🇺🇸美国.proxies.0+DIRECT
+        - proxy-groups.🏴‍☠️其他.proxies.0+DIRECT
 
         # - proxy-groups.节点名字.proxies.0+DIRECT # 向指定分组第一个位置添加一个 DIRECT 节点名
         # 一些可能用到的正则过滤节点示例，使分组更细致
@@ -245,32 +192,33 @@ parsers: # array
         
   # 添加规则
       prepend-rules: # 规则由上往下遍历，如上面规则已经命中，则不再往下处理
-        - DOMAIN-SUFFIX,jdev.tw,🥷PROXY
-        - DOMAIN-SUFFIX,omnivore.app,🥷PROXY
-        - RULE-SET,youtube,🎎YouTube
-        - RULE-SET,netflix,📽Netflix
-        - RULE-SET,openai,🤖OpenAI
-        - RULE-SET,bing,🔍Bing
-        - RULE-SET,bilibiliintl,🛀Bilibiliintl
+        - DOMAIN-SUFFIX,jdev.tw,PROXY
+        - DOMAIN-SUFFIX,omnivore.app,PROXY
+        - RULE-SET,emby,Emby
+        - RULE-SET,youtube,YouTube
+        - RULE-SET,netflix,Netflix
+        - RULE-SET,openai,OpenAI
+        - RULE-SET,bing,Bing
+        - RULE-SET,bilibiliintl,Bilibi
         - RULE-SET,applications,DIRECT
         - DOMAIN,clash.razord.top,DIRECT
         - DOMAIN,yacd.haishan.me,DIRECT
         - RULE-SET,private,DIRECT
-        - RULE-SET,reject,🚦AD
+        - RULE-SET,reject,AD
         - RULE-SET,icloud,DIRECT #
-        - RULE-SET,apple,DIRECT # 这三个为国内可直连地址，如果希望走代理改为🥷PROXY
-        - RULE-SET,google,🥷PROXY # 
-        - RULE-SET,tld-not-cn,🥷PROXY
-        - RULE-SET,gfw,🥷PROXY
-        - RULE-SET,greatfire,🥷PROXY
-        - RULE-SET,telegramcidr,🥷PROXY
+        - RULE-SET,apple,DIRECT # 这三个为国内可直连地址，如果希望走代理改为PROXY
+        - RULE-SET,google,PROXY # 
+        - RULE-SET,tld-not-cn,PROXY
+        - RULE-SET,gfw,PROXY
+        - RULE-SET,greatfire,PROXY
+        - RULE-SET,telegramcidr,PROXY
         - RULE-SET,lancidr,DIRECT
         - RULE-SET,cncidr,DIRECT
         - GEOIP,,DIRECT
         - GEOIP,CN,DIRECT
         - RULE-SET,direct,DIRECT
-        - RULE-SET,proxy,🥷PROXY
-        - MATCH,👆SELECT # ⭐️⭐️规则之外的，在这里来修改是白名单模式还是黑名单模式，具体在“👆SELECT”选择代理或直连。
+        - RULE-SET,proxy,PROXY
+        - MATCH,DIRECT #⭐️规则之外的，在这里来修改是白名单模式还是黑名单模式，具体在“Emby”选择代理或直连。
 
       # 添加规则集
         # DOMAIN-SUFFIX：域名后缀匹配
@@ -289,9 +237,16 @@ parsers: # array
       mix-rule-providers: 
         reject: # 广告域名列表
           type: http
-          behavior: domain
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt"
+          behavior: classical
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite.yaml"
           path: ./ruleset/reject.yaml
+          interval: 86400
+        
+        emby: #  
+          type: http
+          behavior: classical
+          url: "https://raw.githubusercontent.com/likeyi999/baby/surge/clash/Emby.yaml"
+          path: ./ruleset/Emby.yaml
           interval: 86400
           
         icloud: # iCloud 域名列表
