--- a/clash/parsers.yml
+++ b/clash/parsers.yml
@@ -195,6 +195,8 @@ parsers: # array
         - DOMAIN-SUFFIX,jdev.tw,PROXY
         - DOMAIN-SUFFIX,omnivore.app,PROXY
         - RULE-SET,emby,Emby
+        - RULE-SET,reject,AD
+        - RULE-SET,private,AD
         - RULE-SET,youtube,YouTube
         - RULE-SET,netflix,Netflix
         - RULE-SET,openai,OpenAI
@@ -202,9 +204,7 @@ parsers: # array
         - RULE-SET,bilibiliintl,Bilibi
         - RULE-SET,applications,DIRECT
         - DOMAIN,clash.razord.top,DIRECT
-        - DOMAIN,yacd.haishan.me,DIRECT
-        - RULE-SET,private,DIRECT
-        - RULE-SET,reject,AD
+        - DOMAIN,yacd.haishan.me,DIRECT  
         - RULE-SET,icloud,DIRECT #
         - RULE-SET,apple,DIRECT # 这三个为国内可直连地址，如果希望走代理改为PROXY
         - RULE-SET,google,PROXY # 
@@ -213,11 +213,10 @@ parsers: # array
         - RULE-SET,greatfire,PROXY
         - RULE-SET,telegramcidr,PROXY
         - RULE-SET,lancidr,DIRECT
-        - RULE-SET,cncidr,DIRECT
-        - GEOIP,,DIRECT
-        - GEOIP,CN,DIRECT
+        - RULE-SET,cncidr,DIRECT                
         - RULE-SET,direct,DIRECT
         - RULE-SET,proxy,PROXY
+        - GEOIP,CN,DIRECT
         - MATCH,DIRECT #⭐️规则之外的，在这里来修改是白名单模式还是黑名单模式，具体在“Emby”选择代理或直连。
 
       # 添加规则集
@@ -284,11 +283,11 @@ parsers: # array
           path: ./ruleset/direct.yaml
           interval: 86400
           
-        private: # 私有网络专用域名列表
+        Hijacking: # 反劫持
           type: http
-          behavior: domain
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/private.txt"
-          path: ./ruleset/private.yaml
+          behavior: classical
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.yaml"
+          path: ./ruleset/Hijacking.yaml
           interval: 86400
           
         gfw: # GFWList 域名列表
@@ -305,11 +304,11 @@ parsers: # array
           path: ./ruleset/greatfire.yaml
           interval: 86400
           
-        tld-not-cn: # 非中国大陆使用的顶级域名列表
+        Privacy: # 非中国大陆使用的顶级域名列表
           type: http
-          behavior: domain
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/tld-not-cn.txt"
-          path: ./ruleset/tld-not-cn.yaml
+          behavior: classical
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.yaml"
+          path: ./ruleset/Privacy.yaml
           interval: 86400
           
         telegramcidr: # Telegram 使用的 IP 地址列表
