--- a/clash/parsers.yml
+++ b/clash/parsers.yml
@@ -16,8 +16,7 @@ parsers: # array
         type: select
         url: http://www.gstatic.com/generate_204
         interval: 300
-        proxies:
-        
+        proxies:        
          - DIRECT
          - 🇭🇰香港
          - 🇨🇳台湾
@@ -26,11 +25,9 @@ parsers: # array
          - 🇰🇷韩国
          - 🇺🇸美国
          - 🏴‍☠️其他
-
       - name: Emby
         type: select
-        proxies:
-        
+        proxies:        
          - DIRECT
          - 🇭🇰香港
          - 🇨🇳台湾
@@ -38,12 +35,10 @@ parsers: # array
          - 🇸🇬新加坡
          - 🇰🇷韩国
          - 🇺🇸美国
-         - 🏴‍☠️其他
-        
+         - 🏴‍☠️其他        
       - name: YouTube
         type: select
-        proxies:
-        
+        proxies:       
          - DIRECT
          - 🇭🇰香港
          - 🇨🇳台湾
@@ -51,12 +46,10 @@ parsers: # array
          - 🇸🇬新加坡
          - 🇰🇷韩国
          - 🇺🇸美国
-         - 🏴‍☠️其他
-         
+         - 🏴‍☠️其他        
       - name: Netflix
         type: select
         proxies:
-
          - DIRECT
          - 🇭🇰香港
          - 🇨🇳台湾
@@ -65,11 +58,9 @@ parsers: # array
          - 🇰🇷韩国
          - 🇺🇸美国
          - 🏴‍☠️其他
-
       - name: OpenAI
         type: select
-        proxies:
-        
+        proxies:        
          - DIRECT
          - 🇭🇰香港
          - 🇨🇳台湾
@@ -77,25 +68,10 @@ parsers: # array
          - 🇸🇬新加坡
          - 🇰🇷韩国
          - 🇺🇸美国
-         - 🏴‍☠️其他
-
-      - name: Bing
-        type: select
-        proxies:
-       
-         - DIRECT
-         - 🇭🇰香港
-         - 🇨🇳台湾
-         - 🇯🇵日本
-         - 🇸🇬新加坡
-         - 🇰🇷韩国
-         - 🇺🇸美国
-         - 🏴‍☠️其他
-
+         - 🏴‍☠️其他     
       - name: Bilibi
         type: select
-        proxies:
-   
+        proxies:   
          - DIRECT
          - 🇭🇰香港
          - 🇨🇳台湾
@@ -103,45 +79,31 @@ parsers: # array
          - 🇸🇬新加坡
          - 🇰🇷韩国
          - 🇺🇸美国
-         - 🏴‍☠️其他
-
-      - name: AD
-        type: select
-        proxies:
-            - REJECT
-            - DIRECT
-            - PROXY
-               
+         - 🏴‍☠️其他     
       - name: 🇭🇰香港
         type: select
         url: http://www.gstatic.com/generate_204
-        interval: 300
-      
+        interval: 300      
       - name: 🇨🇳台湾
         type: select
         url: http://www.gstatic.com/generate_204
-        interval: 300
-      
+        interval: 300      
       - name: 🇯🇵日本
         type: select
         url: http://www.gstatic.com/generate_204
-        interval: 300
-      
+        interval: 300      
       - name: 🇸🇬新加坡
         type: select
         url: http://www.gstatic.com/generate_204
-        interval: 300
-      
+        interval: 300     
       - name: 🇰🇷韩国
         type: select
         url: http://www.gstatic.com/generate_204
         interval: 300
-
       - name: 🇺🇸美国
         type: select
         url: http://www.gstatic.com/generate_204
-        interval: 300
-      
+        interval: 300      
       - name: 🏴‍☠️其他
         type: select
         url: http://www.gstatic.com/generate_204
@@ -159,10 +121,7 @@ parsers: # array
         # proxies:  
           # - 节点名称或其他分组套娃
           
-      commands:
-        - proxy-groups.().proxies=[]proxyNames
-        
-        - proxy-groups.(YouTube).proxies=[]proxyNames
+      commands:        
         - proxy-groups.🇭🇰香港.proxies=[]proxyNames|港|香港|🇭🇰|HK|Hong Kong # 向指定策略组添加订阅中的节点名，可使用正则过滤
         - proxy-groups.🇨🇳台湾.proxies=[]proxyNames|台|台湾|新北|彰化|TW|Taiwan
         - proxy-groups.🇯🇵日本.proxies=[]proxyNames|日|日本|🇯🇵|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan
@@ -195,27 +154,18 @@ parsers: # array
         - DOMAIN-SUFFIX,jdev.tw,PROXY
         - DOMAIN-SUFFIX,omnivore.app,PROXY
         - RULE-SET,emby,Emby
-        - RULE-SET,reject,AD
-        - RULE-SET,private,AD
-        - RULE-SET,youtube,YouTube
-        - RULE-SET,netflix,Netflix
-        - RULE-SET,openai,OpenAI
-        - RULE-SET,bing,Bing
-        - RULE-SET,bilibiliintl,Bilibi
-        - RULE-SET,applications,DIRECT
-        - DOMAIN,clash.razord.top,DIRECT
-        - DOMAIN,yacd.haishan.me,DIRECT  
-        - RULE-SET,icloud,DIRECT #
-        - RULE-SET,apple,DIRECT # 这三个为国内可直连地址，如果希望走代理改为PROXY
-        - RULE-SET,google,PROXY # 
-        - RULE-SET,tld-not-cn,PROXY
-        - RULE-SET,gfw,PROXY
-        - RULE-SET,greatfire,PROXY
-        - RULE-SET,telegramcidr,PROXY
-        - RULE-SET,lancidr,DIRECT
-        - RULE-SET,cncidr,DIRECT                
-        - RULE-SET,direct,DIRECT
         - RULE-SET,proxy,PROXY
+        - RULE-SET,Global,PROXY         
+        - RULE-SET,direct,DIRECT
+        - RULE-SET,apple,DIRECT
+        - RULE-SET,youtube,YouTube
+        - RULE-SET,google,YouTube
+        - RULE-SET,netflix,Netflix
+        - RULE-SET,openai,OpenAI        
+        - RULE-SET,BiliBili,Bilibi        
+        - RULE-SET,Telegram,PROXY
+        - RULE-SET,Microsoft,DIRECT
+        - RULE-SET,Lan,DIRECT                                        
         - GEOIP,CN,DIRECT
         - MATCH,DIRECT #⭐️规则之外的，在这里来修改是白名单模式还是黑名单模式，具体在“Emby”选择代理或直连。
 
@@ -234,13 +184,7 @@ parsers: # array
 
   # 添加规则集
       mix-rule-providers: 
-        reject: # 广告域名列表
-          type: http
-          behavior: classical
-          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite.yaml"
-          path: ./ruleset/reject.yaml
-          interval: 86400
-        
+                
         emby: #  
           type: http
           behavior: classical
@@ -248,128 +192,86 @@ parsers: # array
           path: ./ruleset/Emby.yaml
           interval: 86400
           
-        icloud: # iCloud 域名列表
+        Global: # Global 
           type: http
-          behavior: domain
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/icloud.txt"
-          path: ./ruleset/icloud.yaml
+          behavior: classical
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global.yaml"
+          path: ./ruleset/Global.yaml
           interval: 86400
           
-        apple: # Apple 在中国大陆可直连的域名列表
+        apple: # Apple 
           type: http
-          behavior: domain
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/apple.txt"
-          path: ./ruleset/apple.yaml
+          behavior: classical
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.yaml"
+          path: ./ruleset/Apple.yaml
           interval: 86400
           
-        google: # Google 在中国大陆可直连的域名列表
+        google: # Google 
           type: http
-          behavior: domain
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/google.txt"
-          path: ./ruleset/google.yaml
+          behavior: classical
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml"
+          path: ./ruleset/Google.yaml
           interval: 86400
           
         proxy: # 代理域名列表
           type: http
-          behavior: domain
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt"
-          path: ./ruleset/proxy.yaml
+          behavior: classical
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Proxy/Proxy.yaml"
+          path: ./ruleset/Proxy.yaml
           interval: 86400
           
-        direct: # 直连域名列表
-          type: http
-          behavior: domain
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt"
-          path: ./ruleset/direct.yaml
-          interval: 86400
-          
-        Hijacking: # 反劫持
+        direct: # 直连
           type: http
           behavior: classical
-          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.yaml"
-          path: ./ruleset/Hijacking.yaml
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.yaml"
+          path: ./ruleset/Direct.yaml
           interval: 86400
           
-        gfw: # GFWList 域名列表
-          type: http
-          behavior: domain
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt"
-          path: ./ruleset/gfw.yaml
-          interval: 86400
-          
-        greatfire: # GreatFire 域名列表
-          type: http
-          behavior: domain
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/greatfire.txt"
-          path: ./ruleset/greatfire.yaml
-          interval: 86400
-          
-        Privacy: # 非中国大陆使用的顶级域名列表
+        Microsoft: # 
           type: http
           behavior: classical
-          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.yaml"
-          path: ./ruleset/Privacy.yaml
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.yaml"
+          path: ./ruleset/Microsoft.yaml
           interval: 86400
-          
-        telegramcidr: # Telegram 使用的 IP 地址列表
-          type: http
-          behavior: ipcidr
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/telegramcidr.txt"
-          path: ./ruleset/telegramcidr.yaml
-          interval: 86400
-          
-        cncidr: # 中国大陆 IP 地址列表
-          type: http
-          behavior: ipcidr
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt"
-          path: ./ruleset/cncidr.yaml
-          interval: 86400
-          
-        lancidr: # 局域网 IP 及保留 IP 地址列表
-          type: http
-          behavior: ipcidr
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/lancidr.txt"
-          path: ./ruleset/lancidr.yaml
-          interval: 86400
-          
-        applications: # 需要直连的常见软件列表
+                                                 
+        Telegram: # Telegram 
           type: http
           behavior: classical
-          url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/applications.txt"
-          path: ./ruleset/applications.yaml
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml"
+          path: ./ruleset/Telegram.yaml
           interval: 86400
-
+                            
+        Lan: # 局域网 
+          type: http
+          behavior: classical
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.yaml"
+          path: ./ruleset/Lan.yaml
+          interval: 86400
+                  
         netflix: # 奈飞的分流规则
           type: http
           behavior: classical
           url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Netflix/Netflix.yaml"
           path: ./ruleset/netflix.yaml
           interval: 86400
-
-        bing: # Bing的分流规则
-          type: http
-          behavior: classical
-          url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Bing/Bing.yaml"
-          path: ./ruleset/bing.yaml
-          interval: 86400
-
+        
         openai: # OpenAI的分流规则
           type: http
           behavior: classical
-          url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI.yaml"
-          path: ./ruleset/openai.yaml
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml"
+          path: ./ruleset/OpenAI.yaml
           interval: 86400    
 
         youtube: # YouTube的分流规则
           type: http
           behavior: classical
-          url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube.yaml"
-          path: ./ruleset/youtube.yaml
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml"
+          path: ./ruleset/YouTube.yaml
           interval: 86400    
 
-        bilibiliintl: # BiliBiliIntl的分流规则
+        BiliBili: # 
           type: http
           behavior: classical
-          url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBiliIntl/BiliBiliIntl.yaml"
-          path: ./ruleset/bilibiliintl.yaml
+          url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml"
+          path: ./ruleset/BiliBili.yaml
           interval: 86400    
