--- a/clash/parsers.yml
+++ b/clash/parsers.yml
@@ -252,7 +252,7 @@ parsers: # array
           type: http
           behavior: classical
           url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Clash/Netflix/Netflix.yaml"
-          path: ./ruleset/netflix.yaml
+          path: ./ruleset/Netflix.yaml
           interval: 86400
         
         openai: # OpenAI的分流规则
