--- a/Xiao.conf
+++ b/Xiao.conf
@@ -15,7 +15,7 @@ RULE-SET,https://github.com/Blankwonder/surge-list/raw/master/cn.list,DIRECT
 DOMAIN,apps.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT // Apple Maps
 DOMAIN-SUFFIX,store.apple.com,DIRECT // Apple Store Online
-RULE-SET,SYSTEM,Proxy
+RULE-SET,SYSTEM,DIRECT
 RULE-SET,https://github.com/Blankwonder/surge-list/raw/master/apple.list,DIRECT
 # 以下规则将触发本地 DNS 解析
 RULE-SET,LAN,DIRECT
