--- a/Xiao.conf
+++ b/Xiao.conf
@@ -1,5 +1,4 @@
 [General]
-skip-proxy = 192.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 127.0.0.1, localhost, *.local
 exclude-simple-hostnames = true
 internet-test-url = http://taobao.com/
 proxy-test-url = http://www.apple.com/
@@ -7,6 +6,7 @@ test-timeout = 2
 dns-server = 223.5.5.5, 114.114.114.114
 # encrypted-dns-server = https://223.5.5.5/ // 除非当地 ISP 有严重的 DNS 污染问题，否则没必要开启 DoH，传统 DNS 的性能最优，网络异常后恢复速度最快
 wifi-assist = false
+udp-policy-not-supported-behaviour = reject
 ipv6 = false // 如无特殊需求不应开启 IPv6，目前网络环境下 IPv6 只会带来问题。
 #hide-vpn-icon = true
 [Rule]
@@ -15,7 +15,7 @@ RULE-SET,https://github.com/Blankwonder/surge-list/raw/master/cn.list,DIRECT
 DOMAIN,apps.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT // Apple Maps
 DOMAIN-SUFFIX,store.apple.com,DIRECT // Apple Store Online
-RULE-SET,SYSTEM,DIRECT
+RULE-SET,SYSTEM,Proxy
 RULE-SET,https://github.com/Blankwonder/surge-list/raw/master/apple.list,DIRECT
 # 以下规则将触发本地 DNS 解析
 RULE-SET,LAN,DIRECT
