--- a/cs/zy.yaml
+++ b/cs/zy.yaml
@@ -71,7 +71,7 @@ proxy-groups:
   - {name: 🇺🇸美国, <<: *a2, filter: "🇺🇸|美|US|(?i)States|American"}             
   - {name: 🇸🇬新加坡, <<: *a2, filter: "🇸🇬|新|坡|SG|(?i)Singapore"    }           
   - {name: 🇰🇷韩国, <<:  *a2, filter: "🇰🇷|韩|首尔|KR|(?i)Korea"     }
-  - {name: 🏴‍☠️其他, <<:  *a2, filter: "^[^🏳️‍🌈香日台新韩美]*$"     }
+  - {name: 🏴‍☠️其他, <<:  *a2, filter: "^[^🏳️‍🌈香|日|台|新|韩|美]*$"     }
 # 分流规则 
 rule-providers:
   Direct:      {<<: *a6, url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Classical.yaml,              path: ./ruleset/China_Classical.yaml       }
